Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100339

qmllint does not find ApplicationWindow.window

XMLWordPrintable

    • 8f6a402622 (qt/qtdeclarative/dev) f3f1660247 (qt/qtdeclarative/6.2) f3f1660247 (qt/tqtc-qtdeclarative/6.2) 8f6a402622 (qt/tqtc-qtdeclarative/dev) f3f1660247 (qt/qtdeclarative/6.2.4) 7487480a7c (qt/qtdeclarative/6.3) 7487480a7c (qt/tqtc-qtdeclarative/6.3)

      import QtQuick.Controls
      ApplicationWindow {
       function f(){
        ApplicationWindow.window
       }
      }
      

      this code produces a warning:

      Property "window" not found on type
      "ApplicationWindow"
      

      And it seems Qt Creator also does not autocomplete window property either, it seems to be missing from plugins.qmltypes file.

        For Gerrit Dashboard: QTBUG-100339
        # Subject Branch Project Status CR V

            qtqmlteam Qt Qml Team User
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes