ApplicationWindow: add QML_ATTACHED macro

...otherwise qmllint will not find the attached property

Fixes: QTBUG-100339
Pick-to: 6.2 6.3
Change-Id: Id72d714494c0a612a3a351937b757d1a6e969166
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>